# ChangeLog for dev-python/markups
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/markups/ChangeLog,v 1.7 2014/11/14 01:21:54 tomwij Exp $

  14 Nov 2014; Tom Wijsman <TomWij@gentoo.org> metadata.xml:
  Maintainer needed.

  28 Aug 2013; Agostino Sarubbo <ago@gentoo.org> markups-0.2.4.ebuild:
  Stable for x86, wrt bug #481938

  23 Aug 2013; Agostino Sarubbo <ago@gentoo.org> markups-0.2.4.ebuild:
  Stable for amd64, wrt bug #481938

  03 Jul 2013; Tom Wijsman <TomWij@gentoo.org> markups-0.2.4.ebuild:
  Fix dependencies, make use of PYTHON_USEDEP.

  03 Jul 2013; Tom Wijsman <TomWij@gentoo.org> markups-0.2.4.ebuild:
  Added missing dev-python/markdown dependency. Added tests, set them to not
  build in parallel to keep output clean; there is no need for that speedup for
  this small package.

  03 Jul 2013; Tom Wijsman <TomWij@gentoo.org> markups-0.2.4.ebuild:
  Added and tested Python 3.3 compatibility, fixes bug #475478 reported by
  Helmut Jarausch.

*markups-0.2.4 (29 Jun 2013)

  29 Jun 2013; Tom Wijsman <TomWij@gentoo.org> +markups-0.2.4.ebuild,
  +metadata.xml:
  New ebuild for dev-python/markups, a wrapper around various text markups;
  dependency of app-editors/retext. Fixes bug #475200, original ebuild by mrueg.