@@ -1,4 +1,27 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA512
+
 DIST Markups-0.2.4.tar.gz 8827 SHA256 0aab138698035e699fad1c88bebb3fa5e90a1876bc7d8fefb3491513fe13f16b SHA512 369eda02474f723d694bc0518324afde9f5baef02719448abb420a77d58cf1543939e6d38aa1db531d4214dc4cd4c47b29d79fa7a23b33b4ae74b45ad2ec52c7 WHIRLPOOL 1118723f5b9725b68d052e2496ccee414782bd6cceaedc49f9c2918c4055145fb95d49cf962c46eb669ab7a3a8659b86ed54fa5b99f6ac91266cebc4ecf01b10
+EBUILD markups-0.2.4-r1.ebuild 964 SHA256 229cb3e76460f249504b0bfe63f42faf7b81a0a8afd729d5321f5e0347be536b SHA512 07feed629d4c66a4b39489bbcac586dbf833e610ae82d3f9bcba2fc21abecfc674a7e7b18a37075c417aeb3a46902b8ad50c637bc76d13de2d0cf0c54a036186 WHIRLPOOL 4e746f1511afcb151ba89181ae81f9dd14f53ab8c982426d87b0e4ac8f149ef1d8c3badfda45213fe057cef620d6af7af71f722c49bb3759cdd69258a510473d
 EBUILD markups-0.2.4.ebuild 961 SHA256 d35b36f0c582908603312543d1b7d7f0a6aa2f494b0b9d3d4013d53a4432f13e SHA512 5b0b3d1355ad38cd5117c95b8560f9abb7675606350d52f28258afdbd1e49d98e863005c6ce94d832ae9c00961fcfac6b717bd053f3b8e65c16c5333d6f2aebf WHIRLPOOL e8ebc0a8a52b6db8040c6c4d16e595456ebd7f6f67d5124cb3500ce886f3fe406757f1904708e6c8bdcc48b04a45094fc5d17eb45595c17355f14dc4da6087cc
-MISC ChangeLog 1310 SHA256 c4557a51051975bdc345a060fc179f1626f4a435c40038805ffe3b6486910182 SHA512 6c41aeaee8d0bcc3aa2d7a65567f87531e5e3fbb17bbbbcc7d7783b97eaf8e8d50f1a193f163ef62184e644784c3f32a17109528b9758501ca9dab7d428cff2f WHIRLPOOL 37d8df0dd9379ae899971d6e482506f8b9c3629089e2cc2ee59391009c2a77db901e8ea364a3d1f769e4ea337bac44e94241ca3f55f095fd0b9449e67d3b2591
-MISC metadata.xml 218 SHA256 b9c4e078e790c79cce33647ee3c32d0a0f3fdcb3723ec172ea56b7fdffa63a27 SHA512 5cda51f3b38c3b59e7023f1ce4ce67b96b58eb56c7e1e2c1b67c27e233b892e25dcad50921646d9fc760fbbc7be4303071f0bb617f0a5c435d65a2a4ec76104a WHIRLPOOL ad97de623f02ee9d1c8cd81708a7fe171a93ccff7c6912534f71373e1b9ee7796a1411d3df445acf5df061cd0198f28d3e0624f89baffedd6362c969587c81f1
+MISC ChangeLog 1451 SHA256 9c28b30333a99bdf015b632b12fdff1f376d3f15704fed0ed3c48ba58f5682f4 SHA512 de934cf00325673c284807f0ae621722d978f2742fce325bdffa2485c65ab9f84e41aadf45bc5228ded457b87d1d4befa96d43e4eca9b5091cf7cdc5c87f6b91 WHIRLPOOL b4f1492963b84027a24b0b2d9a309f32dd8fa2f223232a794e4d93210b62497bf835cfe743d19127f0614f0b3465c9c6d91d2b13fee527e7041e143c2437bf23
+MISC metadata.xml 205 SHA256 b4660d1f4b47c8c40fc6f986791c6da3f0d7513fe4489a0d2bbb83346dcb1f5b SHA512 0e0b6e89b125b4849b4164e7cabb5297ae930c4db499c6685c3852a60e209418c26eb33e452a0a78e800c960ac5032f97d436bc3b7266a0ac76092f6f2595d11 WHIRLPOOL dc3dc7c840a6640b42e3fc981c95d0a8e43d3b5834f447a09deebc1b35dbb26e48c3d85db73725c42d2036edd9f141fb02a3a9d61522861f4e97e3e974987473
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0
+
+iQJ8BAEBCgBmBQJUZa22XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
+OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVira+YP/2IR5fqZSsSqJtVELcHqSA75
++zgZr6nLztusQM9lasjIZZtAqXg6W2sYzIIcYDYD2Qc08pD7sbpcVvxzWVHBFSor
+zfi4FzOffR9FHPKn34kO81b/uo/AGxmKirXIsIvE2iHhTMt4AtU8XPn4QKpmIya3
+1h13rKAtWNiw4AQUqqHj1RGqTF1h3Sdw8vWFLikRzAGIZ/vhI95IoHK2jD15jJFZ
+VF/eThLXDkXjremwS7gLufPSi0WJ83BLAlGv1ZuftLRZvdjNqT7BYivu4PCA4utK
+c6dmLlsYWKqbfRoh1whX7J2qlzODlNRcwaYzfW9yJ1VdAXyRSP74C5U+dElsU1Fj
+3IuEJcMhnywzixqPnf9+7aaZYvo6MpjEQHErcswepVxmedrmUVjScvwlRZHjwQMX
+qbA2SCbJw3LZrxFKUhZoAdItOc5DiysxzOI8SzmLfXsdHAQ0UBjyx7dDR6UP2Q/e
+Pgt9Cor98rVUDz4beF+UxPelc3HN1ERkQz+VieaYIbibY6AgQeasOi+4x/1LvPUo
+opYrFhuBh0DIpHfDaWdiQrejrwT75vA3Q6oJni4FjPSb+2I4FjhyECwFxFdBOtDv
+vgjQaa7BXT4KieLY9FwvX8AR3bb9jo1oMtzeqfja/aqkNV5cpLUYT0zw0yRlpFYc
+YX5Ch2aoxnhEfBWUF2r5
+=P5ia
+-----END PGP SIGNATURE-----
