@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/markups
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/markups/ChangeLog,v 1.7 2014/11/14 01:21:54 tomwij Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/markups/ChangeLog,v 1.8 2014/11/14 07:22:29 jlec Exp $
+
+*markups-0.2.4-r1 (14 Nov 2014)
+
+  14 Nov 2014; Justin Lecher <jlec@gentoo.org> +markups-0.2.4-r1.ebuild,
+  metadata.xml:
+  Add py3_4 support
 
   14 Nov 2014; Tom Wijsman <TomWij@gentoo.org> metadata.xml:
   Maintainer needed.
